<resources>
    <string name="app_name">MaterialDesignExample</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="google_api_key">AIzaSyCHVQSS-A98R5rPW_9qPSw2tbjuYUOti2k</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register Account ?</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_mobile_number">Your Mobile Number</string>
    <string name="choose_your_password">Choose your password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roomdbexample">Room Database Example</string>
    <string name="recycler_header_text">Recycler Header Text</string>
    <string name="the_text_goes_here">The Text Goes Here!</string>
</resources>
